<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <TextView
            android:text="@string/student_information_management"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"/>

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/nameET"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:importantForAutofill="no"
            android:id="@+id/phoneET"
            android:hint="@string/enter_your_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:importantForAutofill="no"
            android:id="@+id/mailET"
            android:hint="@string/enter_your_mail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:importantForAutofill="no"
            android:id="@+id/cgpaET"
            android:hint="@string/enter_your_cgpa"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/saveBtn"
            android:text="@string/save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <Button
            android:onClick="showDetails"
            android:layout_gravity="center"
            android:id="@+id/showBtn"
            android:text="@string/show"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
